--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
     <head>
         <meta charset="UTF-8">
         <title>Odin Recipes</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
 
     <body>
         <h1>Odin Recipes</h1>
         <img src="./images/cat.jpg">
-        <ul>
-            <li><a href="recipes/babka.html">Babka</a></li>
-            <li><a href="recipes/cholodnik.html">Cholodnik</a></li>
-            <li><a href="recipes/kalduny.html">Kalduny</a></li>
+        <ul class="main-page">
+            <li class="white"><a href="recipes/babka.html">Babka</a></li>
+            <li class="red"><a href="recipes/cholodnik.html">Cholodnik</a></li>
+            <li class="white"><a href="recipes/kalduny.html">Kalduny</a></li>
           </ul>
     </body>
 </html>
