Fix the lists on non-main pages

--- a/recipes/babka.html
+++ b/recipes/babka.html
@@ -11,7 +11,7 @@
         <img src="../images/Babka.webp" height="400" width="267">
         <p>This hearty Belarusian potato babka is made from grated potatoes, flavored with bacon bits or salt pork and sautéed onions. It’s usually baked into a type of casserole until it’s golden on top and creamy and fluffy in the center.</p>
         <h3>Ingridients</h3>
-        <ul>
+        <ul class="non-main-list">
             <li>potatoes</li>
             <li>onions</li>
             <li>salt pork or bacon</li>
