--- a/recipes/cholodnik.html
+++ b/recipes/cholodnik.html
@@ -12,7 +12,7 @@
         <img src="../images/cholodnik.jpg">
         <p>I was born in Belarus; therefore, I would like to share with you a part of Belarusian culture, specifically, a part of Belarusian cuisine.</p>
         <h3>Ingridients</h3>
-        <ul>
+        <ul class="non-main-list">
             <li>6-8 small fresh beets (about 2 pounds with tops)</li>
             <li>a bunch of green onions (1/4 pound)</li>
             <li>a bunch of dill</li>
