--- a/recipes/kalduny.html
+++ b/recipes/kalduny.html
@@ -11,7 +11,7 @@
         <img src="../images/kalduny.jpg" height="300" width="400">
         <p>Kolduny (kalduny) is a traditional dish of Belarusian cuisine. There are two varieties of kolduny: flour and potato.</p>
         <h3>Ingridients</h3>
-        <ul>
+        <ul class="non-main-list">
             <li>200g ground beef</li>
             <li>1 large white onion</li>
             <li>1 teaspoon salt</li>
